# HBbot

./: .gitignore  DEPLOYMENT.md  README.md  birthday-bot.service  birthday_belated_prompt.txt  birthday_bot.py  birthday_image_prompt.txt  birthday_prompt.txt  constants.py  delivery_tracking.example.json  deploy.sh  env.example  kandinsky_client.py  main.py  pyproject.toml  users_config.example.json  users_config.json
